--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: black;
 }
 .icon{
@@ -6,12 +16,23 @@ body{
 }
 h1{
     color: rgb(0, 255, 0);
+    margin-bottom: 20px;
 }
 h2{
+    margin-top: 10px;
     display: flex;
     align-items: center;
     gap: 10px;
     color: rgb(0, 255, 0);
+    font-size: 20px;
+}
+a{
+    text-decoration: underline 1px;
+    color: rgb(0, 255, 0);
+    transition: all 0.3s;
+}
+a:hover{
+    color: rgb(0, 201, 0);
 }
 span{
     color: rgb(0, 255, 0);
@@ -20,4 +41,5 @@ hr{
     background-color: rgb(0, 255, 0);
     border: none;
     height: 1px;
+    margin-top: 20px;
 }
