--- a/app/globals.css
+++ b/app/globals.css
@@ -1,45 +1,60 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
+    background-color: black;
+    color: rgb(0, 255, 0);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.main {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: black;
 }
-.icon{
-    color: rgb(0, 255, 0);
-}
-h1{
-    color: rgb(0, 255, 0);
-    margin-bottom: 20px;
-}
-h2{
-    margin-top: 10px;
+
+.contact {
     display: flex;
     align-items: center;
-    gap: 10px;
-    color: rgb(0, 255, 0);
-    font-size: 20px;
+    gap: 8px;
+    margin-bottom: 8px;
+    justify-content: space-between;
+    width: 300px;
 }
-a{
-    text-decoration: underline 1px;
-    color: rgb(0, 255, 0);
-    transition: all 0.3s;
+
+h1 {
+    margin-bottom: 50px
 }
-a:hover{
-    color: rgb(0, 201, 0);
-}
-span{
+
+.icon {
     color: rgb(0, 255, 0);
 }
-hr{
-    background-color: rgb(0, 255, 0);
+
+a {
+    color: rgb(0, 255, 0);
+    text-decoration: underline;
+    transition: 0.3s;
+}
+
+a:hover {
+    color: rgb(0, 143, 0);
+}
+
+hr {
     border: none;
+    background-color: rgb(0, 255, 0);
     height: 1px;
+    border-radius: 8px;
+    width: 100vw;
+    margin-top: 20px;
+}
+
+p {
     margin-top: 20px;
 }
