--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,6 @@ body {
     background-color: black;
     color: rgb(0, 255, 0);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
 }
 
 .main {
@@ -21,7 +19,11 @@ body {
 }
 
 .main h2 {
-    margin-top: 20px;
+    margin-top: 30px;
+}
+
+.main .subtitulo {
+    margin-top: 40px;
 }
 
 .contact {
@@ -30,11 +32,16 @@ body {
     gap: 8px;
     margin-bottom: 8px;
     justify-content: space-between;
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
 }
 
 h1 {
     margin-bottom: 30px
+}
+
+h3 {
+    margin-top: 30px;
 }
 
 .icon {
@@ -51,17 +58,13 @@ a:hover {
     color: rgb(0, 143, 0);
 }
 
-hr {
-    border: none;
-    background-color: rgb(0, 255, 0);
-    height: 1px;
-    border-radius: 8px;
-    width: 100%;
-    margin-top: 20px;
-}
-
 p {
-    margin-top: 15px;
+    margin-top: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
+    width: auto;
+    max-width: 100%;
+    text-align: center;
 }
 
 ::-webkit-scrollbar {
@@ -69,7 +72,7 @@ p {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgb(0, 144, 0);
+    background: rgb(0, 255, 0);
     border-radius: 4px;
     transition: background 0.3s;
 }
@@ -83,4 +86,15 @@ p {
         scrollbar-width: thin;
         scrollbar-color: #00ff00 #1a1a1a;
     }
+}
+
+body li:last-of-type {
+    margin-bottom: 25px;
+
+}
+
+li {
+    font-size: large;
+    margin-bottom: 10px;
+    list-style: none;
 }
