--- a/app/globals.css
+++ b/app/globals.css
@@ -89,12 +89,22 @@ p {
 }
 
 body li:last-of-type {
-    margin-bottom: 25px;
+    margin-bottom: 30px;
 
 }
 
 li {
     font-size: large;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     list-style: none;
+    width: auto;
+    max-width: 100%;
+}
+ul{
+    text-align: left;
+}
+@media (max-width: 412px){
+    ul{
+        width: 300px;
+    }
 }
