--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     background-color: black;
     color: rgb(0, 255, 0);
@@ -100,12 +105,19 @@ li {
     width: auto;
     max-width: 100%;
 }
-ul{
+
+ul {
+    width: 100%;
+    max-width: 500px;
+    padding-left: 15px;
+    padding-right: 15px;
     text-align: left;
 }
-@media (max-width: 412px){
-    ul{
-        width: 300px;
+
+@media (max-width: 412px) {
+    ul {
         max-width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
