--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,9 @@ ul {
         padding-right: 20px;
     }
 }
+.img{
+    height: 550px;
+    transform: rotate(270deg);
+    border: 1px solid rgb(0, 255, 0);
+    border-radius: 8px;
+}
