--- a/app/globals.css
+++ b/app/globals.css
@@ -121,8 +121,13 @@ ul {
         padding-right: 20px;
     }
 }
+figure{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 .img{
-    height: 550px;
+    height: 542px;
     transform: rotate(270deg);
     border: 1px solid rgb(0, 255, 0);
     border-radius: 8px;
