--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,13 @@ body {
 body {
     background-color: black;
     color: rgb(0, 255, 0);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.code {
+    font-family: 'JetBrains Mono', 'Fira Code', monospace;
+    font-size: 0.95em;
+    font-weight: 600;
 }
 
 .main {
@@ -64,6 +70,7 @@ a:hover {
 }
 
 p {
+    font-size: 16px;
     margin-top: 20px;
     margin-left: 15px;
     margin-right: 15px;
@@ -121,12 +128,14 @@ ul {
         padding-right: 20px;
     }
 }
-figure{
+
+figure {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
-.img{
+
+.img {
     height: 542px;
     transform: rotate(270deg);
     border: 1px solid rgb(0, 255, 0);
